Rewrite record, test, kill parsatrion completely.