@@ -7,13 +7,15 @@
                  [org.clojure/core.match "0.2.1"]
                  [org.clojure/tools.logging "0.2.6"]
                  [org.clojure/tools.macro "0.1.2"]
+                 [org.clojure/math.numeric-tower "0.0.4"]
                  [slingshot "0.10.3"]
                  [clj-mmap "1.1.2"]
-                 [the/parsatron "0.0.3"]
                  [instaparse "1.2.12"]]
   :warn-on-reflection true
   :aot :all
-  :jvm-opts ["-Xmx1g" "-Xms1g"]
+  :jvm-opts ["-Xmx1g" "-Xms1g"
+             ;; "-XX:+PrintGC" "-XX:+PrintGCDetails" "-XX:+PrintGCTimeStamps"
+             ]
   :main flub.core
   :profiles {:dev {:resource-paths ["examples/" "resources/"]}})
 
